# cgmquantify

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
src/cgmquantify/: measures.py  utils.py
tests/: test_measures.py
tests/data/: cgm.csv  cgm_measures.csv
tests/test_data/: cgm_measures.csv
tests/test_data/cgmquantify_GT (1)/: iglu_measures.xlsx
tests/test_data/cgmquantify_GT (1)/iglu_formatted/: .RData  .Rhistory  Dexcom_01_iglu.csv  Dexcom_02_iglu.csv  Dexcom_04_iglu.csv  Dexcom_05_iglu.csv  Dexcom_12_iglu.csv  Dexcom_13_iglu.csv  Dexcom_15_iglu.csv
tests/test_data/cgmquantify_GT (1)/metrics/: subject_01.csv  subject_010.csv  subject_011.csv  subject_012.csv  subject_013.csv  subject_014.csv  subject_015.csv  subject_016.csv  subject_02.csv  subject_03.csv  subject_04.csv  subject_05.csv  subject_06.csv  subject_07.csv  subject_08.csv  subject_09.csv
tests/test_data/cgmquantify_GT/iglu_formatted/: Dexcom_03_iglu.csv  Dexcom_06_iglu.csv  Dexcom_07_iglu.csv  Dexcom_08_iglu.csv  Dexcom_09_iglu.csv  Dexcom_10_iglu.csv  Dexcom_11_iglu.csv  Dexcom_14_iglu.csv  Dexcom_16_iglu.csv
tests/test_data/test_cgm/: subject_1.csv  subject_10.csv  subject_11.csv  subject_12.csv  subject_13.csv  subject_14.csv  subject_15.csv  subject_16.csv  subject_2.csv  subject_3.csv  subject_4.csv  subject_5.csv  subject_6.csv  subject_7.csv  subject_8.csv  subject_9.csv
