[tool.poetry]
name = "cgmquantify"
version = "0.1.0"
description = "Package for extracting metrics from CGM data"
authors = ["bc299 <bc299@duke.edu>"]
readme = "README.md"
packages = [{include = "cgmquantify", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9"  # Lower Python requirement
pandas = "^2.0.0"
numpy = "^1.24.0"
scipy = "^1.15.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
flake8 = "^7.1.2"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"